# ai-brand-perception

./: README.md  docker-compose.yml  package-lock.json  package.json
.github/workflows/: ci.yml
backend/: .dockerignore  .gitignore  Dockerfile  pyproject.toml
backend/app/: main.py  tasks.py  worker.py
backend/app/core/: auth.py  config.py  database.py  encryption.py  progress.py
backend/app/models/: report.py  schedule.py  user.py
backend/app/routes/: auth.py  reports.py  schedules.py  usage.py
backend/app/services/: analysis.py
backend/tests/: conftest.py  test_analysis.py  test_auth.py  test_reports.py  test_usage.py
frontend/: Dockerfile  nginx.conf  package.json
frontend/src/: App.tsx
frontend/src/components/: api-key-dialog.tsx  new-analysis-dialog.tsx  theme-toggle.tsx
frontend/src/components/layout/: app-layout.tsx  sidebar.tsx
frontend/src/components/report/: competitor-chart.tsx  model-comparison.tsx  pillar-cards.tsx  score-card.tsx  sentiment-gauge.tsx  trend-chart.tsx
frontend/src/hooks/: use-analysis-dialog.ts  use-analysis-stream.ts
frontend/src/lib/: api.ts  chart.ts  constants.ts  format.ts  schemas.ts
frontend/src/lib/__tests__/: api.test.ts
frontend/src/pages/: dashboard.tsx  new-analysis.tsx  report.tsx
frontend/src/services/: auth.ts  reports.ts  schedules.ts
frontend/src/stores/: auth.ts  report.ts
frontend/src/stores/__tests__/: auth.test.ts  report.test.ts
frontend/src/test/: setup.ts  test-utils.tsx
frontend/src/types/: index.ts
