[project]
name = "perception-ai-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "bcrypt>=5.0.0",
    "fastapi>=0.115.0",
    "pydantic[email]>=2.12.5",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.37",
    "uvicorn[standard]>=0.34.0",
]

[tool.setuptools]
packages = ["app"]
